--- a/maintenance.html
+++ b/maintenance.html
@@ -3,7 +3,9 @@ layout: default
 ---
 <div class="editable maintenance">
   <div class="pageImage maintPic">
-    <h2>You bought a boat to go sailing.</h2>
+    <div class="container">
+      <h2>You bought a boat to go sailing.</h2>
+    </div>
   </div>
 
   <h3 class="statement">Not to spend time managing tradespeople, doing maintenance or finding people to crew.</h3>
@@ -30,6 +32,10 @@ layout: default
 
   </div>
 
+  <div class="contactUs">
 
+    <a href="mailto:jeremy@jeevesmarine.com.au"><h4>Get in touch</h4></a>
+
+  </div>
 
 </div>
