--- a/about.html
+++ b/about.html
@@ -8,58 +8,66 @@ title: About Jeeves Marine
   </div>
   <h2>Jeremy Larkin - Director</h2>
   <p class="editable">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    Jeremy developed an interest in sailing as a young lad in New Plymouth, New Zealand. He pestered his father into building an Optimist with him and would wander round Auckland Marina with sailing magazines spotting his dream keelboats. He taught sailing in Scotland and has crossed the English Channel umpteen times. After moving to Melbourne in 2012, he immediately got involved in ocean and round-the-sticks racing, then started working in the industry in 2013 as a yacht broker.
   </p>
 </div>
 
 <div class="grid services">
 
-  <div class="col-4_sm-12">
-    <h4>Project Management</h4>
+  <div class="col-6_sm-12">
+    <h3>Project Management</h3>
     <div>
       <p class="editable">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Jeremy's past career in the construction industry provides him with the project management skills he needs to handle all aspects of your work. His work as a yacht broker means he has the connections with a wide range of tradespeople and service providers. And he has the tenacity and charm to get the work done.
       </p>
     </div>
   </div>
 
-  <div class="col-4_sm-12">
+  <!-- <div class="col-4_sm-12">
     <h4>Brokerage</h4>
     <div>
       <p class="editable">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Jeremy worked as a yacht broker for three years and
       </p>
     </div>
-  </div>
+  </div> -->
 
-  <div class="col-4_sm-12">
-    <h4>Sailing</h4>
+  <div class="col-6_sm-12">
+    <h3>Sailing</h3>
     <div>
       <p class="editable">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Jeremy has extensive experience of sailing and managing a wide range of boats, from Optimists to Moody54 Deck Saloons and everything in between. He has undertaken ocean races in Europe and Australia, including Melborne-Launceston, Melbourne-Stanley, Apollo Bay, King Island and Sydney-Hobart. He ran the Get Active program to mentor owners new to racing and has sourced crew for race boats around Port Phillip.
       </p>
     </div>
   </div>
 </div>
 
 <div class="partners">
-  <h4>A selection of our partners</h4>
+  <h3>A selection of our partners</h3>
   <div class="grid partnerNames">
-    <div class="col-3_sm-12">
+    <div class="col-4_sm-12">
       <a href="http://MelbourneMarineElectronics.com.au" target="_blank"><h5>Melbourne Marine Electronics</h5></a>
       <h6>Marine electronics and control systems specialists</h6>
     </div>
-    <div class="col-3_sm-12">
+    <div class="col-4_sm-12">
       <a href="mailto:ntilley@elitemech.com.au" target="_blank"><h5>Elite Mechanical Power</h5></a>
       <h6>Marine engine specialists</h6>
     </div>
-    <div class="col-3_sm-12">
+    <div class="col-4_sm-12">
       <a href="mailto:sycassidy@icloud.com" target="_blank"><h5>Sue's Onboard Supplies</h5></a>
       <h6>Boat detailing</h6>
     </div>
-    <div class="col-3_sm-12">
+    <div class="col-4_sm-12">
       <a href="http://antoniamochan.com" target="_blank"><h5>Antonia Mochan</h5></a>
       <h6>Websites, social media</h6>
+    </div>
+    <div class="col-4_sm-12">
+      <a href="http://mbmarineservices.com.au/index.html" target="_blank"><h5>MB Marine Services</h5></a>
+      <h6>Shipwright and boat maintenance</h6>
+    </div>
+    <div class="col-4_sm-12">
+      <a href="http://www.customyachtcovers.com.au/" target="_blank"><h5>Custom Yacht Covers</h5></a>
+      <h6>Covers, dodgers, biminies</h6>
     </div>
 
   </div>
